@@ -1,0 +1,3 @@
+bin_SCRIPTS = mds-survey
+CLEANFILE = $(bin_SCRIPTS)
+EXTRA_DIST = mds-survey README.mds-survey
